<resources>
    <string name="app_name">Coffee Around U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">LOGIN</string>
    <string name="no_account">No account?</string>
    <string name="register_now">Register Now</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="full_address">Full Address</string>
    <string name="profile_account">Profile Account</string>
    <string name="my_profile_account">My Profile Account</string>
    <string name="username">Username</string>
    <string name="phone_number_profile">+62438589248294829</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_profile_under">Tap to Edit Your Profile</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_under">Tap to Change Your Password</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_under">Tap to Logout</string>
    <string name="coffee_around_you">Coffee Around You</string>
    <string name="explore">Explore</string>
    <string name="cafe_around_you">Cafe Around You</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="size_small">S</string>
    <string name="size_medium">M</string>
    <string name="size_large">L</string>
    <string name="purchase">Purchase</string>
    <string name="detail">Detail</string>
</resources>