<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AccountFragment">

    <!-- TODO: Update blank fragment layout -->
<!--    <TextView-->
<!--        android:id="@+id/tvProfileAccount"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/profile_account"-->
<!--        android:textColor="@color/darkBrown"-->
<!--        android:textSize="18sp"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        />-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/accent"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_editor_absoluteX="20dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView2"
                        android:layout_width="54dp"
                        android:layout_height="54dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/background"
                        app:cardCornerRadius="1000dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <com.github.ybq.android.spinkit.SpinKitView
                            android:id="@+id/spinKit"
                            style="@style/SpinKitView.Large.ThreeBounce"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:foregroundGravity="center"
                            android:padding="10dp"
                            app:SpinKit_Color="@color/accent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>
                            <ImageView
                                android:id="@+id/userDP"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_person"
                                android:translationZ="100dp" />
                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="13dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
                        app:layout_constraintStart_toEndOf="@+id/cardView2"
                        app:layout_constraintTop_toTopOf="@+id/cardView2">
                        <TextView
                            android:id="@+id/username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                        <TextView
                            android:id="@+id/hpUser"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/phone_number_profile"
                            android:textColor="@color/white"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardBackgroundColor="@color/accent"
                app:cardCornerRadius="10dp"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                tools:layout_editor_absoluteX="20dp">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivEdit"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="12dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_person"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>
                    <LinearLayout
                        android:id="@+id/linearLayoutEdit"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/ivEdit"
                        app:layout_constraintEnd_toStartOf="@+id/ivForward"
                        app:layout_constraintStart_toEndOf="@+id/ivEdit"
                        app:layout_constraintTop_toTopOf="@+id/ivEdit">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/edit_profile"
                            android:textColor="@color/white" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:alpha="0.5"
                            android:text="@string/edit_profile_under"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/ivForward"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_forward"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutEdit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/linearLayoutEdit" />
                    <ImageView
                        android:id="@+id/ivLock"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="12dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_lock"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivEdit" />
                    <LinearLayout
                        android:id="@+id/linearLayoutgp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/ivLock"
                        app:layout_constraintEnd_toStartOf="@+id/ivForward2"
                        app:layout_constraintStart_toEndOf="@+id/ivLock"
                        app:layout_constraintTop_toTopOf="@+id/ivLock">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/change_password"
                            android:textColor="@color/white" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:alpha="0.5"
                            android:text="@string/change_password_under"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivForward2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_forward"
                        app:layout_constraintBottom_toBottomOf="@+id/linearLayoutgp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/linearLayoutgp" />

                    <ImageView
                        android:id="@+id/ivLogout"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="12dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_logout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ivLock" />
                    <LinearLayout
                        android:id="@+id/logoutLayout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="@+id/ivLogout"
                        app:layout_constraintEnd_toStartOf="@+id/ivForward3"
                        app:layout_constraintStart_toEndOf="@+id/ivLogout"
                        app:layout_constraintTop_toTopOf="@+id/ivLogout">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/log_out"
                            android:textColor="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:alpha="0.5"
                            android:text="@string/log_out_under"
                            android:textColor="@color/white"
                            android:textSize="11sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/ivForward3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_forward"
                        app:layout_constraintBottom_toBottomOf="@+id/logoutLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/logoutLayout"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>




















